--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <body>
         <h1>About me</h1>
         <p>I build website</p>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Python</li>
+        </ul>
     </body>
 </html>
